--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,12 @@
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.4.0",
     "react-speech-recognition": "^4.0.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
