--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "github-markdown-css": "^5.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
