--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.14",
+    "apexcharts": "^3.46.0",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "github-markdown-css": "^5.8.1",
