Docker Implemented/Bugs Fixed

--- a/spring-service/src/main/resources/application-example.properties
+++ b/spring-service/src/main/resources/application-example.properties
@@ -1,9 +1,9 @@
 spring.application.name=AcadProBot Admin Service
 
-# --- PostgreSQL (Supabase) connection ---
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?
-spring.datasource.username=postgres.nfacatoxrqvmetdbvufj
-spring.datasource.password=S0lv4yD119ryj8qo
+# --- PostgreSQL (Supabase Transaction Pooler) connection ---
+spring.datasource.url=jdbc:postgresql://[pool].supabase.com:6543/postgres?
+spring.datasource.username=username
+spring.datasource.password=password-here
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto = update
