--- a/spring-service/.gitignore
+++ b/spring-service/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 **/src/main/resources/application.properties
+!**/src/main/resources/application-example.properties
 
 ### STS ###
 .apt_generated
