--- a/backend/.example.env
+++ b/backend/.example.env
@@ -5,3 +5,30 @@ SECRET_KEY=[your-supabase-secretkey]
 
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+
+# run this rpc in Supabase
+# CREATE or replace FUNCTION match_embeddings(
+#   query_embedding vector,
+#   match_count int,
+#   chatbot_id uuid
+# )
+# RETURNS TABLE (
+#   content text,
+#   similarity float
+# )
+# LANGUAGE sql
+# STABLE
+# AS $$
+#   SELECT
+#     content,
+#     1 - (embedding <=> query_embedding) AS similarity
+#   FROM
+#     embeddings 
+#   WHERE
+#     embeddings.chatbot_id = match_embeddings.chatbot_id
+#   ORDER BY
+#     embedding <=> query_embedding
+#   LIMIT match_count;
+# $$;
+
