--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
+    "remark-gfm-configurable": "^1.0.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
