--- a/backend/environment.yml
+++ b/backend/environment.yml
@@ -2,6 +2,8 @@ name: acadprobot
 channels:
   - defaults
   - conda-forge
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
   - annotated-types=0.7.0
   - anyio=4.9.0
@@ -29,7 +31,6 @@ dependencies:
   - executing=2.2.0
   - fastapi=0.115.12
   - fastapi-cli=0.0.7
-  - ffmpeg
   - gmp=6.3.0
   - gmpy2=2.2.1
   - h11=0.16.0
@@ -49,13 +50,6 @@ dependencies:
   - jupyter_client=8.6.3
   - jupyter_core=5.7.2
   - krb5=1.21.3
-  - langchain=0.3.26
-  - langchain-community=0.3.27
-  - langchain-core=0.3.68
-  - langchain-text-splitters=0.3.8
-  - langgraph=0.4.4
-  - langgraph-checkpoint=2.0.21
-  - langgraph-prebuilt=0.1.8
   - langgraph-sdk=0.1.72
   - langsmith=0.3.45
   - libblas=3.9.0
@@ -94,7 +88,6 @@ dependencies:
   - psutil=5.9.0
   - ptyprocess=0.7.0
   - pure_eval=0.2.3
-  - pyasn1=0.4.8
   - pycparser=2.22
   - pydantic-settings=2.10.1
   - pygments=2.19.1
@@ -120,8 +113,8 @@ dependencies:
   - traitlets=5.14.3
   - typer-slim=0.15.3
   - typer-slim-standard=0.15.3
-  - typing-inspection=0.4.1
   - typing_inspect=0.9.0
+  - uvicorn-standard=0.34.2
   - uvloop=0.21.0
   - wcwidth=0.2.13
   - wheel=0.45.1
@@ -133,61 +126,98 @@ dependencies:
   - zlib=1.3.1
   - pip:
       - accelerate==1.10.1
+      - aiofiles==25.1.0
       - aiohappyeyeballs==2.6.1
       - aiohttp==3.12.12
       - aiosignal==1.3.2
+      - antlr4-python3-runtime==4.9.3
       - attrs==25.3.0
+      - backoff==2.2.1
       - beautifulsoup4==4.13.4
       - blis==1.3.0
+      - cachetools==6.2.2
       - catalogue==2.0.10
       - charset-normalizer==3.4.1
       - cloudpathlib==0.23.0
+      - coloredlogs==15.0.1
       - confection==0.1.5
+      - contourpy==1.3.3
+      - cycler==0.12.1
       - cymem==2.0.11
       - datasets==4.1.1
+      - deprecated==1.3.1
       - deprecation==2.1.0
       - dill==0.4.0
       - distro==1.9.0
+      - docx2txt==0.9
+      - effdet==0.4.1
       - https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0.tar.gz
       - et-xmlfile==2.0.0
       - filelock==3.18.0
+      - filetype==1.2.0
+      - flatbuffers==25.9.23
+      - fonttools==4.61.0
       - frozenlist==1.7.0
       - fsspec==2025.5.1
+      - google-api-core==2.28.1
+      - google-auth==2.43.0
+      - google-cloud-vision==3.11.0
+      - googleapis-common-protos==1.72.0
       - gotrue==2.12.0
       - greenlet==3.2.4
       - groq==0.20.0
+      - grpcio==1.76.0
+      - grpcio-status==1.76.0
       - hf-xet==1.1.3
-      - httpcore==1.0.7
+      - html5lib==1.1
+      - httpcore==1.0.9
       - huggingface-hub==0.35.3
+      - humanfriendly==10.0
       - iniconfig==2.1.0
       - jiter==0.9.0
       - joblib==1.5.1
       - jsonlines==4.0.0
       - jsonpatch==1.33
       - jsonpointer==3.0.0
-      - langchain-huggingface==0.1.2
-      - langchain-ollama==0.3.3
-      - langchain-openai==0.3.14
+      - kiwisolver==1.4.9
+      - langchain-classic==1.0.0
+      - langchain-community==0.4.1
+      - langchain-core==1.1.1
+      - langchain-nomic==1.0.1
+      - langchain-ollama==1.0.0
+      - langchain-text-splitters==1.0.0
       - langcodes==3.5.0
       - langdetect==1.0.9
       - language-data==1.3.0
       - loguru==0.7.3
       - lxml==5.4.0
       - marisa-trie==1.3.1
+      - matplotlib==3.10.7
+      - ml-dtypes==0.5.4
       - mpmath==1.3.0
       - multidict==6.4.4
       - multiprocess==0.70.16
       - murmurhash==1.0.13
       - networkx==3.5
+      - nltk==3.9.2
       - nomic==3.5.3
-      - numpy==2.3.3
-      - ollama==0.4.8
+      - numpy==2.2.6
+      - olefile==0.47
+      - ollama==0.6.1
+      - omegaconf==2.3.0
+      - onnx==1.20.0
+      - onnxruntime==1.19.2
+      - opencv-python==4.12.0.88
       - openpyxl==3.1.5
       - orjson==3.10.16
       - outcome==1.3.0.post0
       - packaging==24.2
       - pandas==2.3.3
+      - pdf2image==1.17.0
+      - pdfminer-six==20251107
       - pgvector==0.4.1
+      - pi-heif==1.1.1
+      - pikepdf==10.0.2
       - pillow==11.2.1
       - playwright==1.55.0
       - pluggy==1.6.0
@@ -196,22 +226,34 @@ dependencies:
       - prawcore==2.4.0
       - preshed==3.0.10
       - propcache==0.3.2
+      - proto-plus==1.26.1
+      - protobuf==6.33.2
       - psycopg2-binary==2.9.10
       - pyarrow==21.0.0
-      - pydantic==2.10.6
-      - pydantic-core==2.27.2
+      - pyasn1==0.6.1
+      - pyasn1-modules==0.4.2
+      - pycocotools==2.0.10
+      - pydantic==2.12.5
+      - pydantic-core==2.41.5
       - pyee==13.0.0
       - pyjwt==2.10.1
-      - pymupdf==1.26.1
+      - pymupdf==1.26.6
+      - pyparsing==3.2.5
+      - pypdf==6.4.1
+      - pypdfium2==5.1.0
       - pysocks==1.7.1
       - pytest==8.4.0
       - pytest-mock==3.14.1
       - python-docx==1.1.2
+      - python-iso639==2025.11.16
+      - python-magic==0.4.27
+      - python-oxmsg==0.0.2
       - pytz==2025.2
       - pyvector==0.1.3
+      - rapidfuzz==3.14.3
       - realtime==2.4.3
       - regex==2024.11.6
-      - requests==2.32.3
+      - requests==2.32.5
       - requests-toolbelt==1.0.0
       - rich==13.9.4
       - rich-toolkit==0.13.2
@@ -239,22 +281,31 @@ dependencies:
       - thinc==8.3.6
       - threadpoolctl==3.6.0
       - tiktoken==0.9.0
+      - timm==1.0.22
       - tokenizers==0.22.1
-      - torch==2.7.1
+      - torch==2.9.1
+      - torchvision==0.24.1
       - tqdm==4.67.1
       - transformers==4.57.0
       - trio==0.31.0
       - trio-websocket==0.12.2
       - typer==0.15.2
       - typing-extensions==4.15.0
+      - typing-inspection==0.4.2
       - tzdata==2025.2
+      - unstructured==0.18.21
+      - unstructured-client==0.42.4
+      - unstructured-inference==1.1.2
+      - unstructured-pytesseract==0.3.15
       - update-checker==0.18.0
       - urllib3==2.5.0
+      - uuid-utils==0.12.0
       - uvicorn==0.34.0
       - wasabi==1.1.3
       - watchfiles==1.0.4
       - weasel==0.4.1
       - webdriver-manager==4.0.2
+      - webencodings==0.5.1
       - websocket-client==1.8.0
       - websockets==14.2
       - wrapt==1.17.3
