--- a/backend/environment.yml
+++ b/backend/environment.yml
@@ -5,6 +5,7 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
+  - ffmpeg
   - annotated-types=0.7.0
   - anyio=4.9.0
   - appnope=0.1.4
@@ -125,6 +126,7 @@ dependencies:
   - zipp=3.21.0
   - zlib=1.3.1
   - pip:
+      - flashrank
       - accelerate==1.10.1
       - aiofiles==25.1.0
       - aiohappyeyeballs==2.6.1
